Update all todo counters2

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
   var uncompletedTodos = totalTodos - completedTodos;
   todoCount.innerHTML = uncompletedTodos;
 }
+
+updateCounters();
   </script>
 
 </body>
