--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
       Todo: <span id="todo-count">1</span> •
       Done: <span id="completed-count">0</span> •
       Total: <span id="total-count">1</span>
+
+      <!-- link to clean up todos that are done -->
+  <a href="#" onclick="cleanUpDoneTodos(); return false">Clean up</a>
     </div>
   </div>
 
@@ -175,7 +178,19 @@ function toggleDone() {
       // ready to create new todos
       inputField.value = null;
       updateCounters();
+  };
+
+  function cleanUpDoneTodos() {
+  var list = document.getElementById("todolist");
+  var doneItems = document.getElementsByClassName("completed");
+
+  // Reverse loop through the done todo items so we can remove them without changing the index of the remaining items when we remove them
+  for (var i = doneItems.length; i > 0; i--) {
+    list.removeChild(doneItems[i-1]);
   }
+
+//   updateCounters();
+}
 
   </script>
 
