--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>TodoList</title>
@@ -75,6 +76,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h1>TodoList</h1>
@@ -99,46 +101,46 @@
       Total: <span id="total-count">1</span>
 
       <!-- link to clean up todos that are done -->
-  <a href="#" onclick="cleanUpDoneTodos(); return false">Clean up</a>
+      <a href="#" onclick="cleanUpDoneTodos(); return false">Clean up</a>
     </div>
   </div>
 
   <script>
 
-  function updateCounters() {
-  // Total number of todos
-  var totalCount = document.getElementById('total-count');
-  var totalTodos = document.getElementsByClassName("todo").length;
-  totalCount.innerHTML = totalTodos;
+    function updateCounters() {
+      // Total number of todos
+      var totalCount = document.getElementById('total-count');
+      var totalTodos = document.getElementsByClassName("todo").length;
+      totalCount.innerHTML = totalTodos;
 
-  // Total number of completed todos
-  var completedCount = document.getElementById('completed-count');
-  var completedTodos = document.getElementsByClassName("completed").length;
-  completedCount.innerHTML = completedTodos;
+      // Total number of completed todos
+      var completedCount = document.getElementById('completed-count');
+      var completedTodos = document.getElementsByClassName("completed").length;
+      completedCount.innerHTML = completedTodos;
 
-  // Total number of uncompleted todos
-  var todoCount = document.getElementById('todo-count');
-  var uncompletedTodos = totalTodos - completedTodos;
-  todoCount.innerHTML = uncompletedTodos;
-}
+      // Total number of uncompleted todos
+      var todoCount = document.getElementById('todo-count');
+      var uncompletedTodos = totalTodos - completedTodos;
+      todoCount.innerHTML = uncompletedTodos;
+    }
 
-updateCounters();
+    updateCounters();
 
-function toggleDone() {
-  var checkbox = this;
+    function toggleDone() {
+      var checkbox = this;
 
-  // check the checked status of the checkbox
-  if (checkbox.checked) {
-    // the "completed" class is set on the parent element, the <li>
-    checkbox.parentElement.className = "todo completed";
-  } else {
-    checkbox.parentElement.className = "todo";
-  }
+      // check the checked status of the checkbox
+      if (checkbox.checked) {
+        // the "completed" class is set on the parent element, the <li>
+        checkbox.parentElement.className = "todo completed";
+      } else {
+        checkbox.parentElement.className = "todo";
+      }
 
-  updateCounters();
-}
-  
-  function submitTodo() {
+      updateCounters();
+    }
+
+    function submitTodo() {
 
       function createTodo(title) {
         // create a list item
@@ -165,7 +167,7 @@ function toggleDone() {
         var list = document.getElementById("todolist");
         list.appendChild(listItem);
       }
-        // Every todo has it's own id so we can add that to the corresponding label's
+      // Every todo has it's own id so we can add that to the corresponding label's
       // "for" attribute to make sure that when we click the label, the checkbox
       // toggles
       function nextTodoId() {
@@ -178,21 +180,22 @@ function toggleDone() {
       // ready to create new todos
       inputField.value = null;
       updateCounters();
-  };
+    };
 
-  function cleanUpDoneTodos() {
-  var list = document.getElementById("todolist");
-  var doneItems = document.getElementsByClassName("completed");
+    function cleanUpDoneTodos() {
+      var list = document.getElementById("todolist");
+      var doneItems = document.getElementsByClassName("completed");
 
-  // Reverse loop through the done todo items so we can remove them without changing the index of the remaining items when we remove them
-  for (var i = doneItems.length; i > 0; i--) {
-    list.removeChild(doneItems[i-1]);
-  }
+      // Reverse loop through the done todo items so we can remove them without changing the index of the remaining items when we remove them
+      for (var i = doneItems.length; i > 0; i--) {
+        list.removeChild(doneItems[i - 1]);
+      }
 
-//   updateCounters();
-}
+      //   updateCounters();
+    }
 
   </script>
 
 </body>
+
 </html>
