--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         list.removeChild(doneItems[i - 1]);
       }
 
-      //   updateCounters();
+        updateCounters();
     }
 
   </script>
